# shc-toolkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  HANDOVER.md  README.md  ROADMAP.md  pyproject.toml  test_payment_detection.py
.github/workflows/: ansible-e2e.yml  ansible.yml  api-drift.yml  coverage.yml  cross-repo-parity.yml  publish.yml  reap-orphan-vms.yml  security.yml  shc-tests.yml  typecheck.yml
ansible/: .ansible-lint-ignore  .ansible-lint.yml  README.md  playbook.yml  shc_inventory.py  teardown.yml
ansible/group_vars/: all.yml
ansible/molecule/caddy/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/roles/caddy/defaults/: main.yml
ansible/roles/caddy/handlers/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: Caddyfile.j2
ansible/roles/certbot/defaults/: main.yml
ansible/roles/certbot/tasks/: main.yml
ansible/roles/certbot/templates/: nodns-auth-hook.sh.j2  nodns-cleanup-hook.sh.j2
ansible/roles/nodns/defaults/: main.yml
ansible/roles/nodns/tasks/: main.yml
ansible/roles/shc_vm/defaults/: main.yml
ansible/roles/shc_vm/tasks/: main.yml
docs/: CNAME  agent-sessions.md  app.js  cloud-init.md  compute-cashu-email.md  dry-architecture.md  firecracker-pool-mode.md  github-ephemeral-runners.md  iac-integration-plan.md  index.html  migrating-from-gcloud.md  security-audit-cloudinit-seed.md  style.css  webhooks.md
scripts/: audit_cross_repo.py  deploy-tollgate.sh  firecracker-pool-bench.py  firecracker-sanity-check.py  firecracker_pool.py  generate_client.sh  generate_sizes.py  manage-api-keys.mjs  order-vm-playwright.mjs  post-cloudinit-ticket.py  publish_benchmarks.py  reap_orphan_vms.py  recon-tenant-vm.py  setup-dev-worker.sh  subnet-probe.py  sweep-provision-times.py  test-cloudinit-timing-hostkeys.py  webhook_autoscaler.py
shc_toolkit/: __init__.py  benchmark.py  bootstrap.py  catalog_cache.json  cli.py  client.py  compute.py  console.py  contextvm.py  cost_audit.py  github_runner.py  jit_pay.py  mcp_client.py  models.py  nodns.py  openapi.json  provision.py  sizes.py  transport.py  tunnel.py
tests/: conftest.py  test_ansible.py  test_github_runner.py  test_network_fixture.py  test_shc_api.py  test_unit.py
tollgate/: README.md  go.mod  go.sum  main.go  sudoers.d-tollgate
tollgate/faucet/: index.html
