[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shc-toolkit"
version = "0.1.0"
description = "Sovereign Hybrid Compute API client and CLI"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.scripts]
shc = "shc_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["shc_toolkit*"]
