[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shc-toolkit"
version = "0.5.0"
description = "Sovereign Hybrid Compute API client, CLI, and NoDNS + Let's Encrypt DNS-01 provisioning"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["requests>=2.28"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
nodns = ["nostr-sdk>=0.44"]
console = ["playwright>=1.40"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/Amperstrand/shc-toolkit"
SHC_API = "https://blesta.sovereignhybridcompute.com/user-api/docs/"
NoDNS = "https://nodns.shop/"

[project.scripts]
shc = "shc_toolkit.cli:main"
shc-compute = "shc_toolkit.compute:main"

[tool.setuptools.packages.find]
include = ["shc_toolkit*"]
