[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shc-toolkit"
version = "2.4.24.0"
description = "Sovereign Hybrid Compute API client, CLI, and NoDNS + Let's Encrypt DNS-01 provisioning"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amperstrand", email = "dev@amperstrand.com"},
]
dependencies = ["requests>=2.28", "httpx>=0.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
nodns = ["nostr-sdk>=0.44"]
console = ["playwright>=1.40"]
mcp = ["mcp>=1.0"]
generated = ["httpx>=0.24", "attrs>=21.0", "python-dateutil>=2.8"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/Amperstrand/shc-toolkit"
Documentation = "https://github.com/Amperstrand/shc-toolkit#readme"
SHC_API = "https://blesta.sovereignhybridcompute.com/user-api/docs/"
NoDNS = "https://nodns.shop/"
Changelog = "https://github.com/Amperstrand/shc-toolkit/blob/main/CHANGELOG.md"
Issues = "https://github.com/Amperstrand/shc-toolkit/issues"

[project.scripts]
shc = "shc_toolkit.cli:main"
shc-compute = "shc_toolkit.compute:main"

[tool.setuptools.packages.find]
include = ["shc_toolkit*"]

[tool.mypy]
exclude = "shc_toolkit/generated/"
